Fix mobile header and ingredient line wrapping issue

--- a/frontend/src/components/recipe_upsert/recipe_upsert.scss
+++ b/frontend/src/components/recipe_upsert/recipe_upsert.scss
@@ -142,8 +142,9 @@
   @include grid-center;
   &__input {
     height: 10rem;
-    white-space: nowrap;
+    white-space: pre;
     overflow: auto;
+    word-wrap: normal;
   }
 }
 
